--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-
-    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'org.json:json:20210307'
+    implementation 'com.google.android.material:material:1.5.0'
 
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.cardview:cardview:1.0.0'
