--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
     ext {
-        kotlin_version = '1.9.21'
+        kotlin_version = '1.9.20'
     }
     repositories {
         google()
         jcenter()
+        maven {
+            url "https://repo1.perfectomobile.com/public/repositories/maven"
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.2'
+        classpath 'com.android.tools.build:gradle:8.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.perfectomobile.instrumentedtest.gradleplugin:plugin:+'
     }
 }
 
