--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,13 +22,11 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".Activity.atm_search"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+        <activity android:name=".Fragments.ConstantsEditActivity">
+            <!-- Add any intent filters or other configuration if needed -->
         </activity>
+
+
 
     </application>
 
