--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,8 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.5.0'
     implementation 'com.opencsv:opencsv:5.6'
     implementation 'commons-io:commons-io:2.11.0'
+    implementation 'com.rmtheis:tess-two:9.1.0'
+
 
 
 }
