--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,9 @@ perfectoGradleSettings {
     configFileLocation "configFile.json"
 }
 
+def versionNumber = System.getenv("VERSION_NUMBER") ?: "1.3"
+
+
 android {
     compileSdk 34
     defaultConfig {
@@ -13,7 +16,7 @@ android {
         minSdkVersion 28
         targetSdkVersion 31
         versionCode 3
-        versionName "1.3"
+        versionName versionNumber
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     compileOptions {
