--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
       "platformName": "Android",
       "platformVersion": "^[11].*"}
   ],
-  "jobName": "Digital Bank Demo",
+  "jobName": "Digital Bank",
   "jobNumber": 3,
   "branch": "Develop",
   "projectName": "DigitalBank_Mobile",
