Change Perfecto Branding

--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,8 @@ buildscript {
         maven { url "https://repo1.perfectomobile.com/public/repositories/maven" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.2.0'  // Update to a version that supports SDK 35
+        classpath 'com.android.tools.build:gradle:8.6.0'
+        // Update to a version that supports SDK 35
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.perfectomobile.instrumentedtest.gradleplugin:plugin:+'
     }
